<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homepage"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/Top_Blue_Box"
        android:layout_width="420dp"
        android:layout_height="100dp"
        android:src="@drawable/blue_rect_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Tile_Homepage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tile"
        android:textColor="#894ac3"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Message_Text_Box"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginEnd="161dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_message"
        android:ems="10"
        android:hint="@string/message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Message_Title" />


    <TextView
        android:id="@+id/Message_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="66dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="24dp"
        android:text="@string/custom_message"
        android:textColor="#894ac3"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Top_Blue_Box" />

    <ImageButton
        android:id="@+id/Send_Buttton"
        android:layout_width="282dp"
        android:layout_height="194dp"
        android:layout_marginEnd="69dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/shadow_for_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Message_Text_Box"
        app:srcCompat="@drawable/email_alert" />

    <ImageView
        android:id="@+id/Bottom_Blue_Box"
        android:layout_width="420dp"
        android:layout_height="100dp"
        android:src="@drawable/blue_rect_box"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageButton
        android:id="@+id/Contacts_Button"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="85dp"
        android:background="@drawable/shadow_for_buttons"
        android:onClick="goContactsPage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_action_contacts" />

    <ImageButton
        android:id="@+id/Exit_Button"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="85dp"
        android:background="@drawable/shadow_for_buttons"
        android:onClick="goLoginPage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_action_exit" />

</android.support.constraint.ConstraintLayout>